Add JWT auth, RBAC, DTO architecture, and global exception handling