@@ -6,6 +6,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
@@ -13,11 +14,13 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
 
     private final JwtService jwtService;
+
 
     public JwtAuthFilter(JwtService jwtService) {
         this.jwtService = jwtService;
@@ -52,6 +55,8 @@ public class JwtAuthFilter extends OncePerRequestFilter {
         String username =
                 jwtService.extractUsername(token);
 
+        String role = jwtService.extractRole(token);
+
         if (username != null
                 && SecurityContextHolder.getContext()
                 .getAuthentication() == null) {
@@ -60,7 +65,7 @@ public class JwtAuthFilter extends OncePerRequestFilter {
                     new UsernamePasswordAuthenticationToken(
                             username,
                             null,
-                            Collections.emptyList()
+                            List.of(new SimpleGrantedAuthority("ROLE_" + role))
                     );
 
             authToken.setDetails(
